<resources>
<string name="app_name">addyTrackerVs2</string>
<string name="dummy_button">Dummy Button</string>
<string name="dummy_content">DUMMY\nCONTENT</string>
<string name="logMed">Log Medication</string>
<string name="logSymp">Log Symptoms</string>
<string name="crisisScreen">Crisis Screening</string>
<string name="home">Home</string>
<string name="med">Meds</string>
<string name="log">Logs</string>
<string name="sett">Settings</string>
    <string name="cortico">Corticosteroid</string>
    <string name="Hydrocortisone">Hydrocortisone 10mg</string>
    <string name="Stress">Stress Dose</string>
    <string name="SickDose">Sick Dose</string>
    <string name="Medication2">Medication #2</string>
    <string name="Med3">Medication #3</string>
    <string name="HowFeel">How Are You Feeling?</string>
    <string name="emerInj">Emergency Injection</string>
    <string name="crisisInfo">An Adrenal crisis is a life threatening condition that requires emergency intervention. If you believe you may be experiencing an adrenal crisis, please use your emergency injector and head to the nearest Emergency Room.</string>
    <string name="experiencing">Are you current experiencing any of the following?</string>
    <string name="nausea">Nausea</string>
    <string name="vomiting">Vomiting</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="faint">Fainting</string>
    <string name="dizziness">Dizziness</string>
    <string name="lowbp">Low Blood Pressure</string>
    <string name="tremors">Tremors</string>
    <string name="submit">Submit</string>
    <string name="logtypeString">Log Type</string>
    <string name="Cster">Corticosteroid</string>
    <string name="date">Date</string>

    <!--Spinner Array Settings -->
    <string-array name="steroids">
        <item>Hydrocortisone 2.5mg</item>
        <item>Hydrocortisone 5mg</item>
        <item>Hydrocortisone 10mg</item>
        <item>Hydrocortisone 15mg</item>
        <item>Hydrocortisone 20mg</item>
        <item>Hydrocortisone 30mg</item>
    </string-array>

    <string-array name="secondaryMeds">
        <item>Adderal XR 10mg</item>
        <item>Propanolol ER 60mg</item>
        <item>Zofran 0.5mg</item>
    </string-array>

    <string-array name ="thirdMeds">
        <item>Multivitamin</item>
        <item>Vitamin D 500mg</item>
        <item>Klonopin 0.5mg</item>
        <item>Klonopin 1mg</item>
        <item>Melatonin 5mg</item>
    </string-array>

</resources>