<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logHolder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#3180D8FF"
    android:elevation="4dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/logtypeString"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/cortSteroidText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="@string/Cster" />

    <TextView
        android:id="@+id/med2Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="@string/Medication2" />

    <TextView
        android:id="@+id/med3Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="@string/Med3" />

    <TextView
        android:id="@+id/erInjText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="@string/emerInj" />

    <TextView
        android:id="@+id/sympText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/logSymp" />

</LinearLayout>