<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/medCheck"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:clickable="true"
        android:src="@drawable/med"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sympCheck"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:src="@drawable/symp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medCheck" />

    <ImageView
        android:id="@+id/crisisCheck"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:src="@drawable/crisis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sympCheck" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:onClick="showDialog"
        android:src="@drawable/questionmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/logMed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/logMed"
        app:layout_constraintBottom_toBottomOf="@+id/medCheck"
        app:layout_constraintEnd_toEndOf="@+id/medCheck"
        app:layout_constraintStart_toStartOf="@+id/medCheck" />

    <TextView
        android:id="@+id/logSymp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/logSymp"
        app:layout_constraintBottom_toBottomOf="@+id/sympCheck"
        app:layout_constraintEnd_toEndOf="@+id/sympCheck"
        app:layout_constraintStart_toStartOf="@+id/sympCheck" />

    <TextView
        android:id="@+id/logCrisis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/crisisScreen"
        app:layout_constraintBottom_toBottomOf="@+id/crisisCheck"
        app:layout_constraintEnd_toEndOf="@+id/crisisCheck"
        app:layout_constraintStart_toStartOf="@+id/crisisCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>