<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/mobile_navigation" />

    <ImageView
        android:id="@+id/logMed"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment_activity_main"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_activity_main"
        app:srcCompat="@drawable/med" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/logMed"
        app:layout_constraintBottom_toBottomOf="@+id/logMed"
        app:layout_constraintEnd_toEndOf="@+id/logMed"
        app:layout_constraintStart_toStartOf="@+id/logMed" />

    <ImageView
        android:id="@+id/logSymp"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logMed"
        app:srcCompat="@drawable/symp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/logSymp"
        app:layout_constraintBottom_toBottomOf="@+id/logSymp"
        app:layout_constraintEnd_toEndOf="@+id/logSymp"
        app:layout_constraintStart_toStartOf="@+id/logSymp" />

    <ImageView
        android:id="@+id/crisisScreen"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logSymp"
        app:srcCompat="@drawable/crisis" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/crisisScreen"
        app:layout_constraintBottom_toBottomOf="@+id/crisisScreen"
        app:layout_constraintEnd_toEndOf="@+id/crisisScreen"
        app:layout_constraintStart_toStartOf="@+id/crisisScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>